@@ -24,9 +24,9 @@ module ActiveSupport #:nodoc:
           end
         end
 
-        # When an array is given to url_for, it is converted to a slash separated string.
+        # Calls to_param on all its elements and joins the result with slashes. This is used by url_for in Action Pack. 
         def to_param
-          join '/'
+          map(&:to_param).join '/'
         end
 
         # Converts an array into a string suitable for use as a URL query string, using the given <tt>key</tt> as the
